# azure-rtos-esp-idf

./: .gitignore  .gitmodules  README.md
azure-rtos/components/: CMakeLists.txt
azure-rtos/components/threadx/: CMakeLists.txt
azure-rtos/threadx/: CMakeLists.txt
components/azure-rtos/threadx/: CMakeLists.txt
components/azure-rtos/threadx/threadx/: CMakeLists.txt
components/azure-rtos/threadx/threadx/ports/xtensa/xcc/: CMakeLists.txt
components/azure-rtos/threadx/threadx/ports/xtensa/xcc/inc/: xtensa_api.h  xtensa_timer.h
components/azure-rtos/threadx/threadx/ports/xtensa/xcc/src/: tx_clib_lock.c  tx_initialize_low_level.c  tx_thread_schedule.S  xtensa_init.c  xtensa_intr.c  xtensa_intr_asm.S  xtensa_vectors.S
docker/: Dockerfile  README.md
samples/demo_threadx/: CMakeLists.txt  sdkconfig
samples/demo_threadx/main/: CMakeLists.txt  demo_threadx_main.c  tx_user.h
samples/demo_threadx/main/lib/threadx/: CMakeLists.txt
samples/demo_threadx/main/lib/threadx/ports/xtensa/xcc/inc/: tx_port.h  tx_user.h  xtensa_rtos.h
samples/demo_threadx/main/lib/threadx/ports/xtensa/xcc/src/: tx_clib_lock.c  tx_initialize_low_level.c  xtensa_init.c  xtensa_intr.c
samples/hello_world/: CMakeLists.txt  esp-idf-vscode-generated.gdb  sdkconfig
samples/hello_world/.devcontainer/: devcontainer.json
